<resources>
    <string name="app_name">MiniTwitter</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_label_login">Login</string>
    <string name="text_link_sign_up">If don\'t have an account, create one.</string>
    <string name="btn_label_signup">Sign up</string>
    <string name="text_link_login">If you have an account, log in.</string>
    <string name="hint_username">Username</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
